# Bazel-project

./: .bazelrc  .gitignore  BWORKSPACE.bak  ConsoleApplication1.sln  WORKSPACE  nuget2config.json
ClassLibrary1/: BUILD.bazel  ClassLibrary1.csproj  Helper.cs
ClassLibrary1/Properties/: AssemblyInfo.cs
ConsoleApplication1/: BUILD  BUILD.bak  BUILD.bazel  ConsoleApplication1.csproj  Helper.cs  Program.cs
ConsoleApplication1/Properties/: AssemblyInfo.cs
