load(
    "@d2l_rules_csharp//csharp:defs.bzl",
    "csharp_binary",
    "csharp_library",
	"import_library",
	"csharp_library_set"
)

csharp_binary(
	name = "ConsoleApplication1",
	srcs = [
		"Program.cs"
		],
	target_frameworks = ["net48"],
	deps = ["//ClassLibrary1:ClassLibrary1"],
	visibility = ["//visibility:public"],
)

csharp_library_set(
	name = "OnlineBank", 
	deps = ["ConsoleApplication1", "//ClassLibrary1:ClassLibrary1"], 
	target_framework  = "net48",
	visibility = ["//visibility:public"],
)